[gd_scene load_steps=4 format=3 uid="uid://dxutx12jcfnoq"]

[ext_resource type="Script" path="res://scripts/TableGamePanel.gd" id="1_vsvqc"]
[ext_resource type="Theme" uid="uid://ncsyvbfrm621" path="res://SecondaryButtonTheme.tres" id="2_m1hda"]
[ext_resource type="Theme" uid="uid://5hj6pfvbsvck" path="res://ActionButtonTheme.tres" id="3_muuhi"]

[node name="TableGamePanel" type="Panel"]
custom_minimum_size = Vector2(335, 580)
offset_right = 335.0
offset_bottom = 580.0
theme = ExtResource("2_m1hda")
script = ExtResource("1_vsvqc")

[node name="TitleLabel" type="Label" parent="."]
custom_minimum_size = Vector2(315, 60)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 325.0
offset_bottom = 70.0
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="GameImage" type="TextureRect" parent="."]
custom_minimum_size = Vector2(315, 220)
layout_mode = 0
offset_left = 10.0
offset_top = 80.0
offset_right = 325.0
offset_bottom = 300.0

[node name="PlayButton" type="Button" parent="."]
custom_minimum_size = Vector2(315, 120)
layout_mode = 0
offset_left = 10.0
offset_top = 470.0
offset_right = 325.0
offset_bottom = 590.0
theme = ExtResource("3_muuhi")
text = "PLAY"
autowrap_mode = 3

[node name="ComingSoonLabel" type="Label" parent="."]
custom_minimum_size = Vector2(315, 120)
layout_mode = 0
offset_left = 10.0
offset_top = 470.0
offset_right = 325.0
offset_bottom = 590.0
horizontal_alignment = 1
vertical_alignment = 1
